--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
 	display: grid;
-	grid-template: 85rem auto / 11fr 89fr;
+	grid-template: 85rem auto / 115px;
 	grid-template-areas:
 		"header header"
 		"sidebar content";
@@ -14,5 +14,15 @@
 .content {
 	overflow-y: scroll;
 	padding: 10rem;
-	padding-right: 20rem;
+}
+
+@media screen and (max-width: 600px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.content {
+		margin-left: 10px;
+	}
 }
