--- a/src/index.css
+++ b/src/index.css
@@ -25,16 +25,23 @@ body {
   /* background-color: rgb(53, 57, 61);
   color: #ccc; */
   margin: 0;
-  font-family: android-euclid, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: google-sans, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background);
+  color: var(--on-background);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h2 {
+  text-transform: capitalize;
+  font-weight: 900;
 }
 
 ::-webkit-scrollbar {
