--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   /* background-color: rgb(53, 57, 61);
   color: #ccc; */
   margin: 0;
-  font-family: google-sans, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: android-euclid, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
