--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
   color: var(--on-background);
+  transition: all 0.5s;
 }
 
 code {
