--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,8 +2,30 @@
     font-family: google-sans;
 }
 
+.typedElem {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.underline {
+    height: 12rem;
+    width: 172rem;
+    background-color: var(--primary);
+    opacity: 0.4;
+    bottom: 25rem;
+    transition: all 0.3s;
+}
+
+.underline:hover {
+    height: 12rem;
+    width: 172rem;
+    background-color: var(--primary);
+    opacity: 0.6;
+}
+
 .body-text {
-    font-size: 2.5em;
+    font-size: 2em;
     text-align: left;
     text-indent: 1.5em;
     color: var(--primary);
