--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,6 @@
 }
 
 body {
-  /* background-color: rgb(53, 57, 61);
-  color: #ccc; */
   margin: 0;
   font-family: android-euclid, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -58,4 +56,8 @@ button {
 ::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
+}
+
+.page {
+  font-family: google-sans;
 }
