--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,11 +5,11 @@
 }
 
 article {
-    transition: all 0.5s;
+	transition: all 0.5s cubic-bezier(0.57, 0.28, 0.3, 1.05);
 }
 
 article:hover {
-    transform: scale(0.95);
+	transform: scale(0.94);
 }
 
 .card-title {
