--- a/src/index.css
+++ b/src/index.css
@@ -16,48 +16,47 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  scroll-behavior: smooth;
+	margin: 0;
+	padding: 0;
+	user-select: none;
+	scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  font-family: android-euclid, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--background);
-  color: var(--on-background);
-  transition: all 0.5s;
+	margin: 0;
+	font-family: android-euclid, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+		"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: var(--background);
+	color: var(--on-background);
+	transition: all 0.5s cubic-bezier(0.57, 0.28, 0.3, 1.05);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 h2 {
-  text-transform: capitalize;
-  font-weight: 900;
+	text-transform: capitalize;
+	font-weight: 900;
 }
 
 button {
-  background-color: var(--tertiary);
-  color: var(--on-tertiary);
+	background-color: var(--tertiary);
+	color: var(--on-tertiary);
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+	width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2);
+	background-color: rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 }
 
 .page {
-  font-family: google-sans;
+	font-family: google-sans;
 }
