--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -67,7 +67,7 @@
 	}
 	.body-main {
 		margin-left: 5vw;
-	margin-right: 5vw;
+		margin-right: 5vw;
 		margin-top: 2vh;
 		flex-direction: column-reverse;
 	}
@@ -75,11 +75,9 @@
 		text-align: justify;
 	}
 	.social {
-		margin-top: -2vh;
-		margin-bottom: 5vh;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 15;
 	}
 	.chip {
 		margin-top: 1em;
